# MRIDenoiser

./: CMakeLists.txt  README.md  explanation.md  phantom.pgm  test.ipynb
src/: main.cu  mainy.cu
tools/: convert_to_pgm.py  generate_phantom.py
